--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Aswanna</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="location">Select Your Project Location</string>
+
+    <string name="type">Select Your Project Type</string>
+
+    <string name="time">Select Duration of the Project</string>
+
 </resources>
