--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Aswanna</string>
+
+    <string-array name="usertype" >
+        <item>Choose Type</item>
+        <item >Investor</item>
+        <item>Farmer</item>
+
+    </string-array>
+
 </resources>
