--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Aswanna</string>
 
+    <string name="location">Select Your Project Location</string>
+
+    <string name="type">Select Your Project Type</string>
+
+    <string name="time">Select Duration of the Project</string>
+
 
     <string-array name="usertype">
         <item>Choose Type</item>
