--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,9 +37,9 @@
         <item>Level 1</item>
         <item>Level 2</item>
         <item>Level 3</item>
+        <item>Level 4</item>
         <!-- Add more items as needed -->
     </string-array>
-
 
 
 </resources>
